thirdparty/include/libs/raylib55/include/raylib.h

    typedef enum bool { false = 0, true = !false } bool;
typedef struct RLVector2 {
    float x;                
    float y;                
} RLVector2;
typedef struct RLCamera3D {
    RLVector3 position;       
    RLVector3 target;         
    RLVector3 up;             
    float fovy;             
    int projection;         
} RLCamera3D;
typedef RLCamera3D RLCamera;    
typedef struct RLFilePathList {
    unsigned int capacity;          
    unsigned int count;             
    char **paths;                   
} RLFilePathList;
typedef struct RLAutomationEvent {
    unsigned int frame;             
    unsigned int type;              
    int params[4];                  
} RLAutomationEvent;
typedef struct RLAutomationEventList {
    unsigned int capacity;          
    unsigned int count;             
    RLAutomationEvent *events;        
} RLAutomationEventList;
typedef enum {
    KEY_NULL            = 0,        
    KEY_APOSTROPHE      = 39,       
    KEY_COMMA           = 44,       
    KEY_MINUS           = 45,       
    KEY_PERIOD          = 46,       
    KEY_SLASH           = 47,       
    KEY_ZERO            = 48,       
    KEY_ONE             = 49,       
    KEY_TWO             = 50,       
    KEY_THREE           = 51,       
    KEY_FOUR            = 52,       
    KEY_FIVE            = 53,       
    KEY_SIX             = 54,       
    KEY_SEVEN           = 55,       
    KEY_EIGHT           = 56,       
    KEY_NINE            = 57,       
    KEY_SEMICOLON       = 59,       
    KEY_EQUAL           = 61,       
    KEY_A               = 65,       
    KEY_B               = 66,       
    KEY_C               = 67,       
    KEY_D               = 68,       
    KEY_E               = 69,       
    KEY_F               = 70,       
    KEY_G               = 71,       
    KEY_H               = 72,       
    KEY_I               = 73,       
    KEY_J               = 74,       
    KEY_K               = 75,       
    KEY_L               = 76,       
    KEY_M               = 77,       
    KEY_N               = 78,       
    KEY_O               = 79,       
    KEY_P               = 80,       
    KEY_Q               = 81,       
    KEY_R               = 82,       
    KEY_S               = 83,       
    KEY_T               = 84,       
    KEY_U               = 85,       
    KEY_V               = 86,       
    KEY_W               = 87,       
    KEY_X               = 88,       
    KEY_Y               = 89,       
    KEY_Z               = 90,       
    KEY_LEFT_BRACKET    = 91,       
    KEY_BACKSLASH       = 92,       
    KEY_RIGHT_BRACKET   = 93,       
    KEY_GRAVE           = 96,       
    KEY_SPACE           = 32,       
    KEY_ESCAPE          = 256,      
    KEY_ENTER           = 257,      
    KEY_TAB             = 258,      
    KEY_BACKSPACE       = 259,      
    KEY_INSERT          = 260,      
    KEY_DELETE          = 261,      
    KEY_RIGHT           = 262,      
    KEY_LEFT            = 263,      
    KEY_DOWN            = 264,      
    KEY_UP              = 265,      
    KEY_PAGE_UP         = 266,      
    KEY_PAGE_DOWN       = 267,      
    KEY_HOME            = 268,      
    KEY_END             = 269,      
    KEY_CAPS_LOCK       = 280,      
    KEY_SCROLL_LOCK     = 281,      
    KEY_NUM_LOCK        = 282,      
    KEY_PRINT_SCREEN    = 283,      
    KEY_PAUSE           = 284,      
    KEY_F1              = 290,      
    KEY_F2              = 291,      
    KEY_F3              = 292,      
    KEY_F4              = 293,      
    KEY_F5              = 294,      
    KEY_F6              = 295,      
    KEY_F7              = 296,      
    KEY_F8              = 297,      
    KEY_F9              = 298,      
    KEY_F10             = 299,      
    KEY_F11             = 300,      
    KEY_F12             = 301,      
    KEY_LEFT_SHIFT      = 340,      
    KEY_LEFT_CONTROL    = 341,      
    KEY_LEFT_ALT        = 342,      
    KEY_LEFT_SUPER      = 343,      
    KEY_RIGHT_SHIFT     = 344,      
    KEY_RIGHT_CONTROL   = 345,      
    KEY_RIGHT_ALT       = 346,      
    KEY_RIGHT_SUPER     = 347,      
    KEY_KB_MENU         = 348,      
    KEY_KP_0            = 320,      
    KEY_KP_1            = 321,      
    KEY_KP_2            = 322,      
    KEY_KP_3            = 323,      
    KEY_KP_4            = 324,      
    KEY_KP_5            = 325,      
    KEY_KP_6            = 326,      
    KEY_KP_7            = 327,      
    KEY_KP_8            = 328,      
    KEY_KP_9            = 329,      
    KEY_KP_DECIMAL      = 330,      
    KEY_KP_DIVIDE       = 331,      
    KEY_KP_MULTIPLY     = 332,      
    KEY_KP_SUBTRACT     = 333,      
    KEY_KP_ADD          = 334,      
    KEY_KP_ENTER        = 335,      
    KEY_KP_EQUAL        = 336,      
    KEY_BACK            = 4,        
    KEY_MENU            = 5,        
    KEY_VOLUME_UP       = 24,       
    KEY_VOLUME_DOWN     = 25        
} RLKeyboardKey;
typedef enum {
    MOUSE_BUTTON_LEFT    = 0,       
    MOUSE_BUTTON_RIGHT   = 1,       
    MOUSE_BUTTON_MIDDLE  = 2,       
    MOUSE_BUTTON_SIDE    = 3,       
    MOUSE_BUTTON_EXTRA   = 4,       
    MOUSE_BUTTON_FORWARD = 5,       
    MOUSE_BUTTON_BACK    = 6,       
} RLMouseButton;
typedef enum {
    GESTURE_NONE        = 0,        
    GESTURE_TAP         = 1,        
    GESTURE_DOUBLETAP   = 2,        
    GESTURE_HOLD        = 4,        
    GESTURE_DRAG        = 8,        
    GESTURE_SWIPE_RIGHT = 16,       
    GESTURE_SWIPE_LEFT  = 32,       
    GESTURE_SWIPE_UP    = 64,       
    GESTURE_SWIPE_DOWN  = 128,      
    GESTURE_PINCH_IN    = 256,      
    GESTURE_PINCH_OUT   = 512       
} RLGesture;
RLAPI unsigned char *LoadFileData(const char *fileName, int *dataSize); 
RLAPI void UnloadFileData(unsigned char *data);                   
RLAPI bool SaveFileData(const char *fileName, void *data, int dataSize); 
RLAPI bool ExportDataAsCode(const unsigned char *data, int dataSize, const char *fileName); 
RLAPI char *LoadFileText(const char *fileName);                   
RLAPI void UnloadFileText(char *text);                            
RLAPI bool SaveFileText(const char *fileName, char *text);        
RLAPI bool FileExists(const char *fileName);                      
RLAPI bool DirectoryExists(const char *dirPath);                  
RLAPI bool IsFileExtension(const char *fileName, const char *ext); 
RLAPI int GetFileLength(const char *fileName);                    
RLAPI const char *GetFileExtension(const char *fileName);         
RLAPI const char *GetFileName(const char *filePath);              
RLAPI const char *GetFileNameWithoutExt(const char *filePath);    
RLAPI const char *GetDirectoryPath(const char *filePath);         
RLAPI const char *GetPrevDirectoryPath(const char *dirPath);      
RLAPI const char *GetWorkingDirectory(void);                      
RLAPI const char *GetApplicationDirectory(void);                  
RLAPI int MakeDirectory(const char *dirPath);                     
RLAPI bool ChangeDirectory(const char *dir);                      
RLAPI bool IsPathFile(const char *path);                          
RLAPI bool IsFileNameValid(const char *fileName);                 
RLAPI RLFilePathList LoadDirectoryFiles(const char *dirPath);       
RLAPI RLFilePathList LoadDirectoryFilesEx(const char *basePath, const char *filter, bool scanSubdirs); 
RLAPI void UnloadDirectoryFiles(RLFilePathList files);              
RLAPI bool IsFileDropped(void);                                   
RLAPI RLFilePathList LoadDroppedFiles(void);                        
RLAPI void UnloadDroppedFiles(RLFilePathList files);                
RLAPI long GetFileModTime(const char *fileName);                  
RLAPI unsigned char *CompressData(const unsigned char *data, int dataSize, int *compDataSize);        
RLAPI unsigned char *DecompressData(const unsigned char *compData, int compDataSize, int *dataSize);  
RLAPI char *EncodeDataBase64(const unsigned char *data, int dataSize, int *outputSize);               
RLAPI unsigned char *DecodeDataBase64(const unsigned char *data, int *outputSize);                    
RLAPI unsigned int ComputeCRC32(unsigned char *data, int dataSize);     
RLAPI unsigned int *ComputeMD5(unsigned char *data, int dataSize);      
RLAPI unsigned int *ComputeSHA1(unsigned char *data, int dataSize);      
RLAPI RLAutomationEventList LoadAutomationEventList(const char *fileName);                
RLAPI void UnloadAutomationEventList(RLAutomationEventList list);                         
RLAPI bool ExportAutomationEventList(RLAutomationEventList list, const char *fileName);   
RLAPI void SetAutomationEventList(RLAutomationEventList *list);                           
RLAPI void SetAutomationEventBaseFrame(int frame);                                      
RLAPI void StartAutomationEventRecording(void);                                         
RLAPI void StopAutomationEventRecording(void);                                          
RLAPI void PlayAutomationEvent(RLAutomationEvent event);                                  
RLAPI bool IsKeyPressed(int key);                             
RLAPI bool IsKeyPressedRepeat(int key);                       
RLAPI bool IsKeyDown(int key);                                
RLAPI bool IsKeyReleased(int key);                            
RLAPI bool IsKeyUp(int key);                                  
RLAPI int GetKeyPressed(void);                                
RLAPI int GetCharPressed(void);                               
RLAPI void SetExitKey(int key);                               
RLAPI bool IsGamepadAvailable(int gamepad);                                        
RLAPI const char *GetGamepadName(int gamepad);                                     
RLAPI bool IsGamepadButtonPressed(int gamepad, int button);                        
RLAPI bool IsGamepadButtonDown(int gamepad, int button);                           
RLAPI bool IsGamepadButtonReleased(int gamepad, int button);                       
RLAPI bool IsGamepadButtonUp(int gamepad, int button);                             
RLAPI int GetGamepadButtonPressed(void);                                           
RLAPI int GetGamepadAxisCount(int gamepad);                                        
RLAPI float GetGamepadAxisMovement(int gamepad, int axis);                         
RLAPI int SetGamepadMappings(const char *mappings);                                
RLAPI void SetGamepadVibration(int gamepad, float leftMotor, float rightMotor, float duration); 
RLAPI bool IsMouseButtonPressed(int button);                  
RLAPI bool IsMouseButtonDown(int button);                     
RLAPI bool IsMouseButtonReleased(int button);                 
RLAPI bool IsMouseButtonUp(int button);                       
RLAPI int GetMouseX(void);                                    
RLAPI int GetMouseY(void);                                    
RLAPI RLVector2 GetMousePosition(void);                         
RLAPI RLVector2 GetMouseDelta(void);                            
RLAPI void SetMousePosition(int x, int y);                    
RLAPI void SetMouseOffset(int offsetX, int offsetY);          
RLAPI void SetMouseScale(float scaleX, float scaleY);         
RLAPI float GetMouseWheelMove(void);                          
RLAPI RLVector2 GetMouseWheelMoveV(void);                       
RLAPI void SetMouseCursor(int cursor);                        
RLAPI int GetTouchX(void);                                    
RLAPI int GetTouchY(void);                                    
RLAPI RLVector2 GetTouchPosition(int index);                    
RLAPI int GetTouchPointId(int index);                         
RLAPI int GetTouchPointCount(void);                           
RLAPI void SetGesturesEnabled(unsigned int flags);      
RLAPI bool IsGestureDetected(unsigned int gesture);     
RLAPI int GetGestureDetected(void);                     
RLAPI float GetGestureHoldDuration(void);               
RLAPI RLVector2 GetGestureDragVector(void);               
RLAPI float GetGestureDragAngle(void);                  
RLAPI RLVector2 GetGesturePinchVector(void);              
RLAPI float GetGesturePinchAngle(void);                 