engine/thirdparty/raylib55.c3i


// Files management functions
// Load file data as byte array (read)
fn char* loadFileData(ZString fileName, CInt* bytesRead) @cname("LoadFileData");
// Unload file data allocated by loadFileData()
fn void unloadFileData(char* data) @cname("UnloadFileData");
// Save data to file from byte array (write), returns true on success
fn bool saveFileData(ZString fileName, void* data,  CInt dataSize) @cname("SaveFileData");
// Export data to code (.h), returns true on success
fn bool exportDataAsCode(char *data, CInt dataSize, ZString fileName) @cname("ExportDataAsCode");
// Load text data from file (read), returns a '\0' terminated string
fn ZString loadFileText(ZString fileName) @cname("LoadFileText");
// Unload file text data allocated by LoadFileText()
fn void unloadFileText(ZString text) @cname("UnloadFileText");
// Save text data to file (write), string must be '\0' terminated, returns true on success
fn bool saveFileText(ZString fileName, ZString text) @cname("SaveFileText");

// File system functions
// Check if file exists
fn bool fileExists(ZString fileName) @cname("FileExists");
// Check if a directory path exists
fn bool directoryExists(ZString dirPath) @cname("DirectoryExists");
// Check file extension (including point: .png, .wav)
fn bool isFileExtension(ZString fileName, ZString ext) @cname("IsFileExtension");
// Get file length in bytes (NOTE: GetFileSize() conflicts with windows.h)
fn CInt getFileLength(ZString fileName) @cname("GetFileLength");
// Get pointer to extension for a filename string (includes dot: '.png')
fn ZString getFileExtension(ZString fileName) @cname("GetFileExtension");
// Get pointer to filename for a path string
fn ZString getFileName(ZString filePath) @cname("GetFileName");
// Get filename string without extension (uses static string)
fn ZString getFileNameWithoutExt(ZString filePath) @cname("GetFileNameWithoutExt");
// Get full path for a given fileName with path (uses static string)
fn ZString getDirectoryPath(ZString filePath) @cname("GetDirectoryPath");
// Get previous directory path for a given path (uses static string)
fn ZString getPrevDirectoryPath(ZString dirPath) @cname("GetPrevDirectoryPath");
// Get current working directory (uses static string)
fn ZString getWorkingDirectory() @cname("GetWorkingDirectory");
// Get the directory if the running application (uses static string)
fn ZString getApplicationDirectory() @cname("GetApplicationDirectory");
// Create directories (including full path requested), returns 0 on success
fn CInt makeDirectory(ZString dirPath) @cname("MakeDirectory");
// Change working directory, return true on success
fn bool changeDirectory(ZString dir) @cname("ChangeDirectory");
// Check if a given path is a file or a directory
fn bool isPathFile(ZString path) @cname("IsPathFile");
// Check if fileName is valid for the platform/OS
fn bool isFileNameValid(ZString fileName)@cname("IsFileNameValid");
// Load directory filepaths
fn RLFilePathList loadDirectoryFiles(ZString dirPath) @cname("LoadDirectoryFiles");
// Load directory filepaths with extension filtering and recursive directory scan
fn RLFilePathList loadDirectoryFilesEx(ZString basePath, ZString filter, bool scanSubdirs) @cname("LoadDirectoryFilesEx");
// Clear directory files paths buffers (free memory)
fn void unloadDirectoryFiles(RLFilePathList files) @cname("UnloadDirectoryFiles");
// Check if a file has been dropped into window
fn bool isFileDropped() @cname("IsFileDropped");
// Load dropped filepaths
fn RLFilePathList loadDroppedFiles() @cname("LoadDroppedFiles");
// Unload dropped filepaths
fn void unloadDroppedFiles(RLFilePathList files) @cname("UnloadDroppedFiles");
// Get file modification time (last write time)
fn CLong getFileModTime(ZString fileName) @cname("GetFileModTime");

// Compression/Encoding functionality
// Compress data (DEFLATE algorithm)
fn char* compressData(char* data, CInt dataLength, CInt* compDataLength) @cname("CompressData");
// Decompress data (DEFLATE algorithm)
fn char* decompressData(char* compData, CInt compDataLength, CInt* dataLength) @cname("DecompressData");
// Encode data to Base64 string
fn char* encodeDataBase64(char* data, CInt dataLength, CInt* outputLength) @cname("EncodeDataBase64");
// Decode Base64 string data
fn char* decodeDataBase64(char* data, CInt* outputLength) @cname("DecodeDataBase64");
// Compute CRC32 hash code
fn CUInt computeCRC32(char *data, CInt dataSize) @cname("ComputeCRC32");
// Compute MD5 hash code, returns static CInt[4] (16 bytes)
fn CUInt* computeMD5(char *data, CInt dataSize) @cname("ComputeMD5");
// Compute SHA1 hash code, returns static CInt[5] (20 bytes)
fn CUInt* computeSHA1(char *data, CInt dataSize) @cname("ComputeSHA1");
// Automation events functionality
// Load automation events list from file, NULL for empty list, capacity = MAX_AUTOMATION_EVENTS
fn RLAutomationEventList loadAutomationEventList(ZString fileName) @cname("LoadAutomationEventList");
// Unload automation events list from file
fn void unloadAutomationEventList(RLAutomationEventList list) @cname("UnloadAutomationEventList");
// Export automation events list as text file
fn bool exportAutomationEventList(RLAutomationEventList list, ZString fileName) @cname("ExportAutomationEventList");
// Set automation event list to record to
fn void setAutomationEventList(RLAutomationEventList *list) @cname("SetAutomationEventList");
// Set automation event internal base frame to start recording
fn void setAutomationEventBaseFrame(CInt frame) @cname("SetAutomationEventBaseFrame");
// Start recording automation events (RLAutomationEventList must be set)
fn void startAutomationEventRecording() @cname("StartAutomationEventRecording");
// Stop recording automation events
fn void stopAutomationEventRecording() @cname("StopAutomationEventRecording");
// Play a recorded automation event
fn void playAutomationEvent(RLAutomationEvent event) @cname("PlayAutomationEvent");

//------------------------------------------------------------------------------------
// Input Handling Functions (Module: core)
//------------------------------------------------------------------------------------

// Input-related functions: keyboard
// Check if a key has been pressed once
// NOTE(HM) has issues when pressing and releasing a key very fast
fn bool isKeyPressed(RLKeyboardKey key) @cname("IsKeyPressed");
//
// Check if a key has been pressed again (Only PLATFORM_DESKTOP)
fn bool isKeyPressedRepeat(RLKeyboardKey key) @cname("IsKeyPressedRepeat");
// Check if a key is being pressed
fn bool isKeyDown(RLKeyboardKey key) @cname("IsKeyDown");
// Check if a key has been released once
fn bool isKeyReleased(RLKeyboardKey key) @cname("IsKeyReleased");
// Check if a key is NOT being pressed
fn bool isKeyUp(RLKeyboardKey key) @cname("IsKeyUp");
// Get key pressed (keycode), call it multiple times for keys queued, returns 0 when the queue is empty
fn CInt getKeyPressed() @cname("GetKeyPressed");
// Get char pressed (unicode), call it multiple times for chars queued, returns 0 when the queue is empty
fn CInt getCharPressed() @cname("GetCharPressed");
// Set a custom key to exit program (default is ESC)
fn void setExitKey(RLKeyboardKey key) @cname("SetExitKey");

// Input-related functions: gamepads
// Check if a gamepad is available
fn bool isGamepadAvailable(CInt gamepad) @cname("IsGamepadAvailable");
// Get gamepad internal name id
fn ZString getGamepadName(CInt gamepad) @cname("GetGamepadName");
// Check if a gamepad button has been pressed once
fn bool isGamepadButtonPressed(CInt gamepad, CInt button) @cname("IsGamepadButtonPressed");
// Check if a gamepad button is being pressed
fn bool isGamepadButtonDown(CInt gamepad, CInt button) @cname("IsGamepadButtonDown");
// Check if a gamepad button has been released once
fn bool isGamepadButtonReleased(CInt gamepad, CInt button) @cname("IsGamepadButtonReleased");
// Check if a gamepad button is NOT being pressed
fn bool isGamepadButtonUp(CInt gamepad, CInt button) @cname("IsGamepadButtonUp");
// Get the last gamepad button pressed
fn CInt getGamepadButtonPressed() @cname("GetGamepadButtonPressed");
// Get gamepad axis count for a gamepad
fn CInt getGamepadAxisCount(CInt gamepad) @cname("GetGamepadAxisCount");
// Get axis movement value for a gamepad axis
fn float getGamepadAxisMovement(CInt gamepad, CInt axis) @cname("GetGamepadAxisMovement");
// Set internal gamepad mappings (SDL_GameControllerDB)
fn CInt setGamepadMappings(ZString mappings) @cname("SetGamepadMappings");
// Set gamepad vibration for both motors (duration in seconds)
fn void setGamepadVibration(CInt gamepad, float leftMotor, float rightMotor, float duration) @cname("SetGamepadVibration");
// Input-related functions: mouse
// Check if a mouse button has been pressed once
fn bool isMouseButtonPressed(RLMouseButton button) @cname("IsMouseButtonPressed");
// Check if a mouse button is being pressed
fn bool isMouseButtonDown(RLMouseButton button) @cname("IsMouseButtonDown");
// Check if a mouse button has been released once
fn bool isMouseButtonReleased(RLMouseButton button) @cname("IsMouseButtonReleased");
// Check if a mouse button is NOT being pressed
fn bool isMouseButtonUp(RLMouseButton button) @cname("IsMouseButtonUp");
// Get mouse position X
fn CInt getMouseX() @cname("GetMouseX");
// Get mouse position Y
fn CInt getMouseY() @cname("GetMouseY");
// Get mouse position XY
fn RLVector2 getMousePosition() @cname("GetMousePosition");
// Get mouse delta between frames
fn RLVector2 getMouseDelta() @cname("GetMouseDelta");
// Set mouse position XY
fn void setMousePosition(CInt x, CInt y) @cname("SetMousePosition");
// Set mouse offset
fn void setMouseOffset(CInt offsetX, CInt offsetY) @cname("SetMouseOffset");
// Set mouse scaling
fn void setMouseScale(float scaleX, float scaleY) @cname("SetMouseScale");
// Get mouse wheel movement Y
fn float getMouseWheelMove() @cname("GetMouseWheelMove");
// Get mouse wheel movement for both X and Y
fn RLVector2 getMouseWheelMoveV() @cname("GetMouseWheelMoveV");
// Set mouse cursor
fn void setMouseCursor(CInt cursor) @cname("SetMouseCursor");

// Input-related functions: touch
// Get touch position X for touch point 0 (relative to screen size)
fn CInt getTouchX() @cname("GetTouchX");
// Get touch position Y for touch point 0 (relative to screen size)
fn CInt getTouchY() @cname("GetTouchY");
// Get touch position XY for a touch point index (relative to screen size)
fn RLVector2 getTouchPosition(CInt index) @cname("GetTouchPosition");
// Get touch point identifier for given index
fn CInt getTouchPointId(CInt index) @cname("GetTouchPointId");
// Get number of touch points
fn CInt getTouchPointCount() @cname("GetTouchPointCount");

//------------------------------------------------------------------------------------
// Gestures and Touch Handling Functions (Module: rgestures)
//------------------------------------------------------------------------------------
// Enable a set of gestures using flags
fn void setGesturesEnabled(RLGesture flags) @cname("SetGesturesEnabled");
// Check if a gesture have been detected
fn bool isGestureDetected(RLGesture gesture) @cname("IsGestureDetected");
// Get latest detected gesture
fn RLGesture getGestureDetected() @cname("GetGestureDetected");
// Get gesture hold time in seconds
fn float getGestureHoldDuration() @cname("GetGestureHoldDuration");
// Get gesture drag vector
fn RLVector2 getGestureDragVector() @cname("GetGestureDragVector");
// Get gesture drag angle
fn float getGestureDragAngle() @cname("GetGestureDragAngle");
// Get gesture pinch delta
fn RLVector2 getGesturePinchVector() @cname("GetGesturePinchVector");
// Get gesture pinch angle
fn float getGesturePinchAngle() @cname("GetGesturePinchAngle");

//------------------------------------------------------------------------------------
// RLCamera System Functions (Module: rcamera)
//------------------------------------------------------------------------------------
